<resources>
<!--    <string name="app_name">Assignment1</string>-->
    <string name="export_csv_data">Export CSV Data</string>
    <string name="extended_fab_label">Reset Data</string>
    <string name="extended_fab_content_desc">sensor_list</string>
    <string name="chart_title">Real Time Sensor Chart</string>
    <string name="chart_title_description">Sensor Chart Title</string>
    <string name="chart_description">Chart</string>
    <string name="chart">Chart</string>
    <string name="axis_time">Time (t)</string>
    <string name="data_label">Data</string>
    <string name="data_label_x">accelX</string>
    <string name="data_label_y">accelY</string>
    <string name="data_label_z">accelZ</string>
    <string name="current_data_title">Current Data:</string>
    <string name="app_name">Current Place Details</string>
    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="app_name_2">Activity Music App</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_updates">Request updates</string>
    <string name="remove_updates">Remove updates</string>
    <string name="unknown_location">Unknown location</string>

    <string name="batched_location_updates">Batched location updates</string>
    <string name="reset">Reset</string>

    <plurals name="num_locations_reported">
        <item quantity="zero">No location reported</item>
        <item quantity="one">One location reported</item>
        <item quantity="other">%d locations reported</item>
    </plurals>
</resources>