<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_map"
    app:layout_constrainedHeight="true"
    tools:context=".MapsActivityCurrentPlace">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="413dp"
        android:layout_height="294dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:context="com.example.currentplacedetailsonmap.MapsActivityCurrentPlace" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/request_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_weight=".3"
        android:clickable="true"
        android:contentDescription="@string/extended_fab_content_desc"
        android:focusable="true"
        android:gravity="center"
        android:onClick="startLocation"
        android:text="@string/start_tracking"
        android:textAppearance="@style/AppTheme"
        app:backgroundTint="#C0E6B0"
        app:fabSize="mini"
        app:layout_constraintEnd_toStartOf="@+id/remove_updates_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:rippleColor="@color/white"
        app:shapeAppearanceOverlay="@style/fab_3_rounded" />



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/remove_updates_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight=".3"
        android:clickable="true"
        android:contentDescription="@string/extended_fab_content_desc"
        android:focusable="true"
        android:gravity="center"
        android:onClick="stopLocation"
        android:text="@string/stop_tracking"
        android:textAppearance="@style/AppTheme"
        app:backgroundTint="#C0E6B0"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/request_updates_button"
        app:layout_constraintTop_toBottomOf="@+id/map"
        app:rippleColor="@color/white"
        app:shapeAppearanceOverlay="@style/fab_3_rounded" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/reset_tracking"
        android:layout_width="96dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_weight=".3"
        android:clickable="true"
        android:contentDescription="@string/extended_fab_content_desc"
        android:focusable="true"
        android:gravity="center"
        android:onClick="startLocation"
        android:text="@string/reset"
        android:textAppearance="@style/AppTheme"
        app:backgroundTint="#C0E6B0"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_updates_button"
        app:rippleColor="@color/white"
        app:shapeAppearanceOverlay="@style/fab_3_rounded" />

    <TextView
        android:id="@+id/percentageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:textSize="14sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/reset_tracking" />

    <TextView
        android:id="@+id/trackTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_tracking" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/musicPrevious"
        android:layout_width="91dp"
        android:layout_height="43dp"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/extended_fab_content_desc"
        android:focusable="true"
        android:gravity="center"
        android:onClick="musicPrevious"
        android:textAppearance="@style/AppTheme"
        app:backgroundTint="#C0E6B0"
        app:fabSize="mini"
        app:icon="@android:drawable/ic_media_rew"
        app:layout_constraintBottom_toTopOf="@+id/export"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="@color/white"
        app:shapeAppearanceOverlay="@style/fab_3_rounded" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/musicToggle"
        android:layout_width="54dp"
        android:layout_height="43dp"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/extended_fab_content_desc"
        android:focusable="true"
        android:gravity="center"
        android:onClick="musicToggle"
        android:textAppearance="@style/AppTheme"
        app:backgroundTint="#C0E6B0"
        app:fabSize="mini"
        app:icon="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toTopOf="@+id/export"
        app:layout_constraintEnd_toStartOf="@+id/musicNext"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toEndOf="@+id/musicPrevious"
        app:rippleColor="@color/white"
        app:shapeAppearanceOverlay="@style/fab_3_rounded" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/musicNext"
        android:layout_width="91dp"
        android:layout_height="43dp"
        android:layout_gravity="fill_horizontal|center_vertical"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:clickable="true"
        android:contentDescription="@string/extended_fab_content_desc"
        android:focusable="true"
        android:gravity="center"
        android:onClick="musicNext"
        android:textAppearance="@style/AppTheme"
        app:backgroundTint="#C0E6B0"
        app:fabSize="mini"
        app:icon="@android:drawable/ic_media_ff"
        app:layout_constraintBottom_toTopOf="@+id/export"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/white"
        app:shapeAppearanceOverlay="@style/fab_3_rounded" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/export"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_weight=".3"
            android:clickable="true"
            android:contentDescription="@string/extended_fab_content_desc"
            android:focusable="true"
            android:gravity="center"
            android:onClick="export"
            android:text="@string/export_csv_data"
            android:textAppearance="@style/AppTheme"
            app:backgroundTint="#C0E6B0"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@color/white"
            app:shapeAppearanceOverlay="@style/fab_3_rounded" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="209dp" />


</androidx.constraintlayout.widget.ConstraintLayout>